fixed some errors on mobile

--- a/style.css
+++ b/style.css
@@ -158,11 +158,6 @@ li>a:active {
   font-family: 'IBM Plex Mono', monospace;
   margin-top: 5%;
   margin-bottom: 10%;
-
-  moz-transition: all .4s ease-in-out;
-  -o-transition: all .4s ease-in-out;
-  -webkit-transition: all .4s ease-in-out;
-  transition: all .4s ease-in-out;
 }
 
 .container-btn {
@@ -178,9 +173,6 @@ li>a:active {
 
 .btn-hover:hover {
   background-image: linear-gradient(to left, #0000FE, #00F0B8);
-  moz-transition: all .4s ease-in-out;
-  -o-transition: all .4s ease-in-out;
-  -webkit-transition: all .4s ease-in-out;
   transition: all .4s ease-in-out;
 }
 
@@ -210,6 +202,7 @@ li>a:active {
 
 iframe {
   margin: 2% 4%;
+  border: 0;
 }
 
 svg {
@@ -221,7 +214,7 @@ svg {
 
 .triangle {
   position: relative;
-  bottom: -4px;
+  bottom: -5px;
   width: 100%;
   height: 10vw;
 }
@@ -316,8 +309,18 @@ svg {
   align-items: center;
 }
 
+.link-social {
+  color: black;
+}
+
+
+.link-social:visited {
+  color: black;
+}
+
 i {
-  margin: 10px;
+  margin: 15px;
+  margin-bottom: 20px;
 }
 
 
@@ -437,6 +440,10 @@ i {
 
   .container-iframes>iframe {
     flex: 0 40%;
+  }
+
+  iframes {
+    border: 0;
   }
 
   svg {
